--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 </head>
 <body class="min-h-screen py-8">
     <button class="theme-toggle p-2 rounded-full bg-gray-200 dark:bg-gray-700" onclick="toggleTheme()">
+        <i class="fas fa-sun text-yellow-500"></i>
     </button>
 
     <div class="container mx-auto px-4 max-w-4xl">
@@ -408,14 +409,29 @@
             themeToggle.appendChild(icon);
         }
 
-        // 检查系统颜色模式
-        if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-            document.documentElement.setAttribute('data-theme', 'dark');
+        // 检查系统颜色模式并设置初始主题和图标
+        function initTheme() {
+            const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const theme = prefersDark ? 'dark' : 'light';
+            document.documentElement.setAttribute('data-theme', theme);
+
+            // 设置初始图标
+            const themeToggle = document.querySelector('.theme-toggle');
+            const icon = document.createElement('i');
+            icon.classList.add('fas');
+            if (theme === 'dark') {
+                icon.classList.add('fa-moon', 'text-blue-300');
+            } else {
+                icon.classList.add('fa-sun', 'text-yellow-500');
+            }
+            themeToggle.innerHTML = '';
+            themeToggle.appendChild(icon);
         }
 
         // 添加滚动动画
         document.addEventListener('DOMContentLoaded', function() {
-            createCards(); // 先创建新卡片
+            initTheme(); // 初始化主题和图标
+            createCards(); // 创建卡片
             
             const cardContainer = document.getElementById('cardView');
             const cards = Array.from(cardContainer.children);
