--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         const entries = [
           {
             date: "2025-04-25",
-            content: "闹钟的铃声像是战鼓一样迫不及待地响起, 但我仿佛被一层厚重地迷雾困住, 连动一动的力气都没有, 眼皮像被千斤重的铁锤砸中一样, 怎么也睁不开眼, 心底只渴望再次融入这温柔的梦境。妈妈催了一遍又一遍:“还不快点起床, 要迟到了。”"
+            content: "闹钟的铃声像是战鼓一样迫不及待地响起，但我仿佛被一层厚重地迷雾困住，连动一动的力气都没有，眼皮像被千斤重的铁锤砸中一样，怎么也睁不开眼，心底只渴望再次融入这温柔的梦境。妈妈催了一遍又一遍：“还不快点起床，要迟到了。”"
           },
           {
             date: "2025-04-24",
