feat: 添加新的内容项，描述初夏石榴花的美丽

--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
         // 数据数组
         const entries = [
           {
+            date: "2025-04-27",
+            content: "初夏，石榴花渐渐开放了，绿叶衬红花，美丽极了。远望，它像一片熊熊燃烧的烈火，又像红艳艳的晚霞。到了秋天，石榴摇身一变，变成了一个宝石盒，沉甸甸的，圆滚滚的。里面一颗颗石榴籽儿紧紧挨着，像极了晶莹剔透的红宝石。"
+          },
+          {
             date: "2025-04-25",
 
             content: "闹钟的铃声像是战鼓一样迫不及待地响起，但我仿佛被一层厚重地迷雾困住，连动一动的力气都没有，眼皮像被千斤重的铁锤砸中一样，怎么也睁不开眼，心底只渴望再次融入这温柔的梦境。妈妈催了一遍又一遍：“还不快点起床，要迟到了。”"
