--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
     <script>
         // 数据数组
         const entries = [
+        {
+            date: "2025-04-28",
+            content: "她穿着蓝色的运动服，在田径场上是那么耀眼。她微微俯身，凝视前方，脸部线条紧绷，嘴角抿成一条直线，宛如一只蓄势待发的猎豹，透露出全力以赴的决心。哨声一响，她如离弦之箭般猛地射了出去。矫健的身影在跑道上疾驰，如同一道闪电，就连观众的眼睛都追不上她。"
+          },
           {
             date: "2025-04-27",
             content: "初夏，石榴花渐渐开放了，绿叶衬红花，美丽极了。远望，它像一片熊熊燃烧的烈火，又像红艳艳的晚霞。到了秋天，石榴摇身一变，变成了一个宝石盒，沉甸甸的，圆滚滚的。里面一颗颗石榴籽儿紧紧挨着，像极了晶莹剔透的红宝石。"
